background opaque fixed, added new maximize button, btns non-functional, wrap window properties in .components = {}

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 .jr-window{
+    background-color: white;
     position: absolute;
     border: 4px ridge;
     width: 300px;
@@ -31,5 +32,5 @@
 .jr-window main{
     background-color: white;
     width: 100%;
-    height: 88%;
+    /* height: 88%; */
 }
